--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-animations": "0.0.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "mongoose": "^5.3.7",
+    "next-page-transitions": "^1.0.0-alpha.4",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
